@@ -1,12 +1,15 @@
 package lab2;
 
+import lombok.SneakyThrows;
+
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.PrintStream;
+import java.nio.file.FileAlreadyExistsException;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Locale;
-import java.util.function.DoubleFunction;
 
 public class CsvLogger {
     private static final String pathPrefix = "src/test/resources/";
@@ -14,30 +17,28 @@ public class CsvLogger {
 
     private final String filePath;
 
-    public CsvLogger(String fileName) {
-        this.filePath = pathPrefix + fileName;
+    public CsvLogger(String path) {
+        this.filePath = pathPrefix + path;
     }
 
-    public void logToCSV(DoubleFunction<Double> calculate, double from, double to, double step) {
-        try (var ps = openCSVFile()) {
-            String csv;
+    @SneakyThrows
+    public void logToCSV(Calculator calculator, double from, double to, double step) {
+        try (var ps = openCSVFile(calculator.getClass().getSimpleName())) {
             for (var x = from; x < to; x += step) {
-                Double result = calculate.apply(x);
-
-                if (result > 10000) {
-                    result = Double.NaN;
-                }
-
-                csv = String.format(Locale.US, "%f%s%f\n", x, CSV_SEPARATOR, result);
-                ps.print(csv);
+                double result = calculator.calculate(x);
+                ps.printf(Locale.US, "%f%s%f\n", x, CSV_SEPARATOR, result);
             }
         } catch (IOException e) {
             e.printStackTrace();
         }
     }
 
-    private PrintStream openCSVFile() throws IOException {
-        Files.deleteIfExists(Paths.get(this.filePath));
-        return new PrintStream(new FileOutputStream(filePath, true));
+    private PrintStream openCSVFile(String path) throws IOException {
+        Files.deleteIfExists(Paths.get(filePath + path));
+        try {
+            Files.createDirectory(Path.of(this.filePath));
+        } catch (FileAlreadyExistsException ignore) {
+        }
+        return new PrintStream(new FileOutputStream(filePath + path, true));
     }
 }
